[gd_scene load_steps=15 format=3 uid="uid://bf4jsc2ea5esj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_aipmb"]
[ext_resource type="Texture2D" uid="uid://bxqkovsr8i2lg" path="res://sprites/player_idle.png" id="2_ux6ig"]
[ext_resource type="Texture2D" uid="uid://bpgm732b1k1gj" path="res://sprites/player.png" id="3_bklbd"]
[ext_resource type="PackedScene" uid="uid://b4jnxsltsiwhe" path="res://scenes/protection_book.tscn" id="4_y00t8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yfrp8"]
atlas = ExtResource("2_ux6ig")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl8lc"]
atlas = ExtResource("2_ux6ig")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucad5"]
atlas = ExtResource("2_ux6ig")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5hll"]
atlas = ExtResource("3_bklbd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rfk"]
atlas = ExtResource("3_bklbd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmnu8"]
atlas = ExtResource("3_bklbd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5r8mu"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_yfrp8")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fl8lc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ucad5")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5hll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmnu8")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u6ygi"]
radius = 62.518

[sub_resource type="CircleShape2D" id="CircleShape2D_u0jdc"]
radius = 229.367

[sub_resource type="CircleShape2D" id="CircleShape2D_nxh8a"]
radius = 91.6788

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_aipmb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_5r8mu")
animation = &"idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -0.5)
shape = SubResource("CircleShape2D_u6ygi")

[node name="Attack" type="Node2D" parent="."]

[node name="FireBallTimer" type="Timer" parent="Attack"]

[node name="NewFuncTester" type="Timer" parent="Attack"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u0jdc")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_nxh8a")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -67.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = -83.0
value = 100.0

[node name="GUI" type="Control" parent="."]
process_mode = 2
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -148.0
offset_top = -148.0
offset_right = -148.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelPanel" type="Panel" parent="GUI"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
pivot_offset = Vector2(150, 0)

[node name="LevelUp" type="Label" parent="GUI/LevelPanel"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 50.0
text = "LEVEL UP !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUI/LevelPanel"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 0
offset_left = 25.0
offset_top = 50.0
offset_right = 275.0
offset_bottom = 100.0
theme_override_constants/separation = 30

[node name="ProtectionBookPath" parent="." instance=ExtResource("4_y00t8")]
position = Vector2(0, 3)

[connection signal="timeout" from="Attack/FireBallTimer" to="." method="_on_fire_ball_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
